syntax = "proto3";

option java_multiple_files = true;
package com.grpc;

enum Currency {
    EUR = 0;
    USD = 1;
    GBP = 2;
}

message AllWallet {
}

message WalletRequest {
    int64 userId = 1;
    double amount = 2;
    Currency currency = 3;
}

message WalletResponse {
}

message BalanceRequest {
    int64 userId = 1;
}

message BalanceResponse {
    map<string, double> balanceByCurrency = 1;
}

service WalletService {
    rpc all(AllWallet) returns (stream WalletRequest);
    rpc balance(BalanceRequest) returns (BalanceResponse);
    rpc deposit(WalletRequest) returns (WalletResponse);
    rpc withdrawal(WalletRequest) returns (WalletResponse);


    //rpc findOne(FindOneRequest) returns (WalletRequest);
    //rpc delete(DeleteRequest) returns (DeleteResponse);
    //rpc add(AddRequest) returns (AddResponse);
}

